tests/paczka1/fuzzy1/41458942.err
Error in line 4: sIp4Fk A216 84,8
Error in line 8: sIp4Fk S995 59,5
Error in line 18: GhC6oN2AwU9 A216 25,9
Error in line 13: A216 S995 52,0
Error in line 17: bUjJphcOd46 A216 92,8
